--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@tarojs/taro": "^0.0.70",
     "@tarojs/taro-h5": "^0.0.70",
     "@tarojs/taro-weapp": "^0.0.70",
+    "bufferutil": "^4.0.0",
     "nervjs": "^1.3.0",
+    "pomelo-weixin-client": "^1.7.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "utf-8-validate": "^5.0.1"
   },
   "devDependencies": {
     "@tarojs/cli": "^0.0.70",
