删除Redux模块,重构pomelo管理模块,增加统一调度接口函数

--- a/project.config.json
+++ b/project.config.json
@@ -1,13 +1,15 @@
 {
-  "miniprogramRoot": "./dist",
-  "projectname": "An",
-  "description": "安全到家",
-  "appid": "touristappid",
-  "setting": {
-    "urlCheck": true,
-    "es6": false,
-    "postcss": false,
-    "minified": false
-  },
-  "compileType": "miniprogram"
+	"miniprogramRoot": "dist/",
+	"projectname": "An_client",
+	"description": "行程监护客户端",
+	"appid": "wx22a93273d6c1ea5f",
+	"setting": {
+		"urlCheck": false,
+		"es6": false,
+		"postcss": false,
+		"minified": false,
+		"newFeature": true
+	},
+	"compileType": "miniprogram",
+	"condition": {}
 }
