--- a/package.json
+++ b/package.json
@@ -1,54 +1,50 @@
 {
-  "name": "An",
+  "name": "an_client2",
   "version": "1.0.0",
   "private": true,
-  "description": "安全到家",
+  "description": "行程监护客户端",
   "main": "index.js",
   "scripts": {
     "build:weapp": "taro build --type weapp",
     "build:h5": "taro build --type h5",
+    "build:rn": "taro build --type rn",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:h5": "npm run build:h5 -- --watch",
+    "dev:rn": "npm run build:rn -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "^1.0.0-beta.26",
-    "@tarojs/components": "1.0.0-beta.26",
-    "@tarojs/redux": "1.0.0-beta.26",
-    "@tarojs/redux-h5": "1.0.0-beta.26",
-    "@tarojs/router": "1.0.0-beta.26",
-    "@tarojs/taro": "1.0.0-beta.26",
-    "@tarojs/taro-h5": "1.0.0-beta.26",
-    "@tarojs/taro-weapp": "1.0.0-beta.26",
-    "bufferutil": "^4.0.0",
-    "nervjs": "^1.3.0",
     "pomelo-weixin-client": "^1.7.0",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "taro-ui": "^1.1.5",
-    "utf-8-validate": "^5.0.1",
-    "ws": "^6.0.0",
-    "async": "^2.6.1"
+    "async": "^2.6.1",
+    "@tarojs/async-await": "^1.0.3",
+    "@tarojs/components": "^1.0.2",
+    "@tarojs/router": "^1.0.2",
+    "@tarojs/taro": "^1.0.2",
+    "@tarojs/taro-h5": "^1.0.2",
+    "@tarojs/taro-weapp": "^1.0.2",
+    "nervjs": "^1.3.0"
   },
   "devDependencies": {
-    "@tarojs/cli": "1.0.0-beta.26",
-    "@tarojs/plugin-babel": "1.0.0-beta.26",
-    "@tarojs/plugin-csso": "1.0.0-beta.26",
-    "@tarojs/plugin-sass": "1.0.0-beta.26",
-    "@tarojs/plugin-uglifyjs": "1.0.0-beta.26",
-    "@tarojs/webpack-runner": "1.0.0-beta.26",
+    "@types/react": "16.3.14",
+    "@types/webpack-env": "^1.13.6",
+    "@tarojs/plugin-babel": "^1.0.2",
+    "@tarojs/plugin-csso": "^1.0.2",
+    "@tarojs/plugin-sass": "^1.0.2",
+    "@tarojs/plugin-uglifyjs": "^1.0.2",
+    "@tarojs/webpack-runner": "^1.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
-    "eslint-config-taro": "1.0.0-beta.26",
+    "eslint-config-taro": "^1.0.2",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-taro": "1.0.0-beta.26"
+    "eslint-plugin-taro": "^1.0.2"
   }
 }
