--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "pomelo-weixin-client": "^1.7.0",
-    "taro-ui": "^1.1.5",
-    "async": "^2.6.1",
     "@tarojs/async-await": "^1.0.3",
     "@tarojs/components": "^1.0.2",
     "@tarojs/router": "^1.0.2",
     "@tarojs/taro": "^1.0.2",
     "@tarojs/taro-h5": "^1.0.2",
     "@tarojs/taro-weapp": "^1.0.2",
-    "nervjs": "^1.3.0"
+    "async": "^2.6.1",
+    "dayjs": "^1.7.7",
+    "nervjs": "^1.3.0",
+    "pomelo-weixin-client": "^1.7.0",
+    "taro-ui": "^1.1.5"
   },
   "devDependencies": {
     "@types/react": "16.3.14",
